[package]
name = "rwarp"
version = "0.1.0"
edition = "2021"
authors = ["Michael Sumner <mdsumner@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "GDAL warp pipeline in Rust: coordinate transforms, approximate transforms, source window computation, and resampling kernels."
repository = "https://github.com/hypertidy/rwarp"
keywords = ["gdal", "warp", "geospatial", "raster", "reprojection"]
categories = ["science::geo"]
exclude = ["*.Rproj", ".Rproj.user",]
[dependencies]
proj = { version = "0.28", features = ["bundled_proj"] }
vaster = { git = "https://github.com/hypertidy/vaster-rs" }
